--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         </div>
 
         <div class="create-recipe-btn">
-            <a href="./add-recipe/add-recipe.html"> Create Your Own Recipe</a>
+            <a href="add-recipe.html"> Create Your Own Recipe</a>
         </div>
 
         <div id="result-heading"></div>
