--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <div id="single-meal"></div>
 
         <div id="favorites-container">
-            <h2>Your Favorite Recipes</h2>
+            <h2>My Favorite Recipes</h2>
             <div id="favorites" class="meals"></div>
         </div>
 
