--- a/index.html
+++ b/index.html
@@ -44,19 +44,29 @@
             <h2>My Recipes</h2>
             <div id="user-recipes" class="meals-container"></div>
         </section>
-
-        <div id="about-section">
-            <h2>About This App</h2>
-            <br>
-            <p>Recipe App was created by <strong>me</strong> as part of the project report for
-                <em>"Project: Agile Project Management"</em>.</p>
-            <p>It’s a fun way to explore, create, and save your favorite recipes. 
-                Browse by keyword, get random meals, or filter by category.</p>
-            <p>Happy cooking! 🍳❤️</p>
-            <br>
-            <p style="font-size: 10px;">&copy; 2024 Recipe App / <i>Diana Bali</i></p>
-        </div>
     </div>
+
+    <footer>
+        <div class="footer-container">
+            <div class="footer-column">
+            <h3>About</h3>
+            <a href="about.html" target="_blank">About This App</a>
+            </div>
+
+            <div class="footer-column">
+            <h3>Resources</h3>
+            <a href="https://www.themealdb.com/" target="_blank">TheMealDB API</a>
+            </div>
+
+            <div class="footer-column">
+            <h3>Project</h3>
+            <a href="https://github.com/dianabali/CSEBCSAPM01" target="_blank">GitHub Repository</a>
+            </div>
+        </div>
+
+        <p class="footer-credit">&copy; 2024 Recipe App — Created by <strong>Diana Bali</strong></p>
+    </footer>
+
 
     <script src="script.js"></script>
 </body>
