--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <h1>Recipe App</h1>
         <div class="flex">
             <form class="flex" id="submit">
-                <input type="text" id="search" placeholder="Search for recipes or enter a keyword">
+                <input type="text" id="search" placeholder="Search...">
                 <button class="search-btn" type="submit">
                     <i class="fas fa-search"></i>
                 </button>
