--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="style.css" />
   <style>
     body {
-      background-color: aqua;
+      background-color: #1DCD9F;
       font-family: 'Quicksand', sans-serif;
       margin: 0;
       padding: 0;
@@ -16,31 +16,30 @@
     .about-container {
       max-width: 800px;
       margin: 60px auto;
-      background-color: #f9f9f9;
+      background-color: #222222;
       padding: 30px;
-      border-radius: 10px;
-      border: 2px dashed black;
+      border-radius: 40px;
       text-align: center;
     }
 
     .about-container h1 {
       font-size: 28px;
       margin-bottom: 15px;
-      color: #333;
+      color: white;
     }
 
     .about-container p {
       font-size: 16px;
       line-height: 1.6;
-      color: #444;
+      color: white;
       margin-bottom: 15px;
     }
 
     .about-container a.back-btn {
       display: inline-block;
       margin-top: 20px;
-      background-color: #007bff;
-      color: white;
+      background-color: #1DCD9F;
+      color: black;
       padding: 10px 20px;
       border-radius: 8px;
       text-decoration: none;
@@ -49,14 +48,14 @@
     }
 
     .about-container a.back-btn:hover {
-      background-color: #0056b3;
+      background-color: #1DCD9F;
     }
 
     footer {
       margin-top: 50px;
       text-align: center;
       font-size: 13px;
-      color: #555;
+      color: #767676;
     }
   </style>
 </head>
@@ -67,7 +66,7 @@
       It was developed to demonstrate agile practices while creating a real-world, interactive web application.</p>
 
     <p>The app allows users to explore a variety of meals, browse by category, save favorites, and even create their own recipes 
-      with images and ingredients. It integrates with <a href="https://www.themealdb.com/" target="_blank">TheMealDB API</a> to 
+      with images and ingredients. It integrates with <a href="https://www.themealdb.com/" target="_blank" style="color: white;">TheMealDB API</a> to 
       fetch and display meal data dynamically.</p>
 
     <p>Throughout the development process, agile methodologies such as iterative testing, sprint-based planning, and user story 
